--- a/E_commerce/templates/index.html
+++ b/E_commerce/templates/index.html
@@ -17,79 +17,34 @@
         <div class="carousel-inner">
           <div class="carousel-item active bg-primary">
             <div class="row d-flex align-items-center">
-              <!-- <div class="col d-none d-lg-flex justify-content-center">
-                <div class="">
-                  <h3 class="h3 fw-light text-white fw-bold">New Arrival</h3>
-                  <h1 class="h1 text-white fw-bold">Women Fashion</h1>
-                  <p class="text-white fw-bold"><i>Last call for upto 25%</i></p>
-                  <div class=""><a class="btn btn-dark btn-ecomm" href="shop-grid.html">Shop Now</a>
-                  </div>
-                </div>
-              </div> -->
               <div class="col">
                 <img src="{%static 'assets/images/sliders/sales-time.png' %}" class="img-fluid" alt="...">
               </div>
             </div>
           </div>
-          <div class="carousel-item bg-red">
+          <div class="carousel-item">
             <div class="row d-flex align-items-center">
-              <!-- <div class="col d-none d-lg-flex justify-content-center">
-                <div class="">
-                  <h3 class="h3 fw-light text-white fw-bold">Latest Trending</h3>
-                  <h1 class="h1 text-white fw-bold">Fashion Wear</h1>
-                  <p class="text-white fw-bold"><i>Last call for upto 35%</i></p>
-                  <div class=""> <a class="btn btn-dark btn-ecomm" href="shop-grid.html">Shop Now</a>
-                  </div>
-                </div>
-              </div> -->
               <div class="col">
                 <img src="{%static 'assets/images/sliders/sales-man.png' %}" class="img-fluid" alt="...">
               </div>
             </div>
           </div>
-          <div class="carousel-item bg-purple">
+          <div class="carousel-item">
             <div class="row d-flex align-items-center">
-              <!-- <div class="col d-none d-lg-flex justify-content-center">
-                <div class="">
-                  <h3 class="h3 fw-light text-white fw-bold">New Trending</h3>
-                  <h1 class="h1 text-white fw-bold">Kids Fashion</h1>
-                  <p class="text-white fw-bold"><i>Last call for upto 15%</i></p>
-                  <div class=""><a class="btn btn-dark btn-ecomm" href="shop-grid.html">Shop Now</a>
-                  </div>
-                </div>
-              </div> -->
               <div class="col">
                 <img src="{%static 'assets/images/sliders/sales-man2.png' %}" class="img-fluid" alt="...">
               </div>
             </div>
           </div>
-          <div class="carousel-item bg-yellow">
-            <div class="row d-flex align-items-center">
-              <!-- <div class="col d-none d-lg-flex justify-content-center">
-                <div class="">
-                  <h3 class="h3 fw-light text-dark fw-bold">Latest Trending</h3>
-                  <h1 class="h1 text-dark fw-bold">Electronics Items</h1>
-                  <p class="text-dark fw-bold"><i>Last call for upto 45%</i></p>
-                  <div class=""><a class="btn btn-dark btn-ecomm" href="shop-grid.html">Shop Now</a>
-                  </div>
-                </div>
-              </div> -->
+          <div class="carousel-item">
+            <div class="row d-flex align-items-center">->
               <div class="col">
                 <img src="{% static 'assets/images/sliders/sales-woman.png' %}" class="img-fluid" alt="...">
               </div>
             </div>
           </div>
-          <div class="carousel-item bg-green">
+          <div class="carousel-item">
             <div class="row d-flex align-items-center">
-              <!-- <div class="col d-none d-lg-flex justify-content-center">
-                <div class="">
-                  <h3 class="h3 fw-light text-white fw-bold">Super Deals</h3>
-                  <h1 class="h1 text-white fw-bold">Home Furniture</h1>
-                  <p class="text-white fw-bold"><i>Last call for upto 24%</i></p>
-                  <div class=""><a class="btn btn-dark btn-ecomm" href="shop-grid.html">Shop Now</a>
-                  </div>
-                </div>
-              </div> -->
               <div class="col">
                 <img src="{%static 'assets/images/sliders/last.png' %}" class="img-fluid" alt="...">
               </div>
@@ -106,10 +61,6 @@
         </button>
       </div>
     </section>
-    <!--end carousel-->
-
-
-    <!--start Featured Products slider-->
     <section class="section-padding">
       <div class="container">
         <div class="text-center pb-3">
@@ -117,6 +68,7 @@
           <p class="mb-0 text-capitalize">Shop with KassyandI</p>
         </div>
         <div class="product-thumbs">
+          {% for product in products%}
           <div class="card">
             <div class="position-relative overflow-hidden">
               <div class="product-options d-flex align-items-center justify-content-center gap-2 mx-auto position-absolute bottom-0 start-0 end-0">
@@ -124,13 +76,13 @@
                 <a href="javascript:;"><i class="bi bi-basket3"></i></a>
                 <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-zoom-in"></i></a>
               </div>
-              <a href="product-details.html">
-                <img src="{% static 'assets/images/featured-products/cloth1.jpg' %}" class="card-img-top" alt="...">
+              <a href="{%url 'product_details' product.id %}">
+                <img src="{{product.images.url}}" class="card-img-top" alt="...">
               </a>
             </div>
             <div class="card-body">
               <div class="product-info text-center">
-                <h6 class="mb-1 fw-bold product-name">Product Name</h6>
+                <h6 class="mb-1 fw-bold product-name">{{product.name}}</h6>
                 <div class="ratings mb-1 h6">
                   <i class="bi bi-star-fill text-warning"></i>
                   <i class="bi bi-star-fill text-warning"></i>
@@ -138,186 +90,12 @@
                   <i class="bi bi-star-fill text-warning"></i>
                   <i class="bi bi-star-fill text-warning"></i>
                 </div>
-                <p class="mb-0 h6 fw-bold product-price">$49</p>
+                <p class="mb-0 h6 fw-bold product-price">${{product.price}}</p>
               </div>
             </div>
           </div>
-          <div class="card">
-            <div class="position-relative overflow-hidden">
-              <div class="product-options d-flex align-items-center justify-content-center gap-2 mx-auto position-absolute bottom-0 start-0 end-0">
-                <a href="javascript:;"><i class="bi bi-heart"></i></a>
-                <a href="javascript:;"><i class="bi bi-basket3"></i></a>
-                <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-zoom-in"></i></a>
-              </div>
-              <a href="product-details.html">
-                <img src="{%static 'assets/images/featured-products/cloth2.jpg' %}" class="card-img-top" alt="...">
-              </a>
-            </div>
-            <div class="card-body">
-              <div class="product-info text-center">
-                <h6 class="mb-1 fw-bold product-name">Product Name</h6>
-                <div class="ratings mb-1 h6">
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                </div>
-                <p class="mb-0 h6 fw-bold product-price">$49</p>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="position-relative overflow-hidden">
-              <div class="product-options d-flex align-items-center justify-content-center gap-2 mx-auto position-absolute bottom-0 start-0 end-0">
-                <a href="javascript:;"><i class="bi bi-heart"></i></a>
-                <a href="javascript:;"><i class="bi bi-basket3"></i></a>
-                <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-zoom-in"></i></a>
-              </div>
-              <a href="product-details.html">
-                <img src="{% static 'assets/images/featured-products/cloth3.jpg' %}" class="card-img-top" alt="...">
-              </a>
-            </div>
-            <div class="card-body">
-              <div class="product-info text-center">
-                <h6 class="mb-1 fw-bold product-name">Product Name</h6>
-                <div class="ratings mb-1 h6">
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                </div>
-                <p class="mb-0 h6 fw-bold product-price">$49</p>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="position-relative overflow-hidden">
-              <div class="product-options d-flex align-items-center justify-content-center gap-2 mx-auto position-absolute bottom-0 start-0 end-0">
-                <a href="javascript:;"><i class="bi bi-heart"></i></a>
-                <a href="javascript:;"><i class="bi bi-basket3"></i></a>
-                <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-zoom-in"></i></a>
-              </div>
-              <a href="product-details.html">
-                <img src="{% static 'assets/images/featured-products/cloth4.jpg' %}" class="card-img-top" alt="...">
-              </a>
-            </div>
-            <div class="card-body">
-              <div class="product-info text-center">
-                <h6 class="mb-1 fw-bold product-name">Product Name</h6>
-                <div class="ratings mb-1 h6">
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                </div>
-                <p class="mb-0 h6 fw-bold product-price">$49</p>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="position-relative overflow-hidden">
-              <div class="product-options d-flex align-items-center justify-content-center gap-2 mx-auto position-absolute bottom-0 start-0 end-0">
-                <a href="javascript:;"><i class="bi bi-heart"></i></a>
-                <a href="javascript:;"><i class="bi bi-basket3"></i></a>
-                <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-zoom-in"></i></a>
-              </div>
-              <a href="product-details.html">
-                <img src="{% static 'assets/images/featured-products/cloth5.jpg' %}" class="card-img-top" alt="...">
-              </a>
-            </div>
-            <div class="card-body">
-              <div class="product-info text-center">
-                <h6 class="mb-1 fw-bold product-name">Product Name</h6>
-                <div class="ratings mb-1 h6">
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                </div>
-                <p class="mb-0 h6 fw-bold product-price">$49</p>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="position-relative overflow-hidden">
-              <div class="product-options d-flex align-items-center justify-content-center gap-2 mx-auto position-absolute bottom-0 start-0 end-0">
-                <a href="javascript:;"><i class="bi bi-heart"></i></a>
-                <a href="javascript:;"><i class="bi bi-basket3"></i></a>
-                <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-zoom-in"></i></a>
-              </div>
-              <a href="product-details.html">
-                <img src="{% static 'assets/images/featured-products/cloth6.jpg' %}" class="card-img-top" alt="...">
-              </a>
-            </div>
-            <div class="card-body">
-              <div class="product-info text-center">
-                <h6 class="mb-1 fw-bold product-name">Product Name</h6>
-                <div class="ratings mb-1 h6">
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                </div>
-                <p class="mb-0 h6 fw-bold product-price">$49</p>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="position-relative overflow-hidden">
-              <div class="product-options d-flex align-items-center justify-content-center gap-2 mx-auto position-absolute bottom-0 start-0 end-0">
-                <a href="javascript:;"><i class="bi bi-heart"></i></a>
-                <a href="javascript:;"><i class="bi bi-basket3"></i></a>
-                <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-zoom-in"></i></a>
-              </div>
-              <a href="product-details.html">
-                <img src="{% static 'assets/images/featured-products/cloth7.jpg' %}" class="card-img-top" alt="...">
-              </a>
-            </div>
-            <div class="card-body">
-              <div class="product-info text-center">
-                <h6 class="mb-1 fw-bold product-name">Product Name</h6>
-                <div class="ratings mb-1 h6">
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                </div>
-                <p class="mb-0 h6 fw-bold product-price">$49</p>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="position-relative overflow-hidden">
-              <div class="product-options d-flex align-items-center justify-content-center gap-2 mx-auto position-absolute bottom-0 start-0 end-0">
-                <a href="javascript:;"><i class="bi bi-heart"></i></a>
-                <a href="javascript:;"><i class="bi bi-basket3"></i></a>
-                <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-zoom-in"></i></a>
-              </div>
-              <a href="product-details.html">
-                <img src="{% static 'assets/images/featured-products/cloth8.jpg' %}" class="card-img-top" alt="...">
-              </a>
-            </div>
-            <div class="card-body">
-              <div class="product-info text-center">
-                <h6 class="mb-1 fw-bold product-name">Product Name</h6>
-                <div class="ratings mb-1 h6">
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                  <i class="bi bi-star-fill text-warning"></i>
-                </div>
-                <p class="mb-0 h6 fw-bold product-price">$49</p>
-              </div>
-            </div>
-          </div>
-        </div>
+          {% endfor %}
+        </div> 
       </div>
     </section>
     <!--end Featured Products slider-->
