--- a/E_commerce/templates/contact_us.html
+++ b/E_commerce/templates/contact_us.html
@@ -180,7 +180,7 @@
 
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
-            <a href="{% url 'product_details' %}">
+            {% comment %} <a href="{% url 'product_details' %}"> {% endcomment %}
               <img src="{% static 'assets/images/new-arrival/01.webp' %}" width="60" alt="">
             </a>
           </div>
@@ -196,7 +196,7 @@
         <hr>
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
-            <a href="product-details.html">
+            {% comment %} <a href="product-details.html"> {% endcomment %}
               <img src="{% static 'assets/images/new-arrival/02.webp' %}" width="60" alt="">
             </a>
           </div>
@@ -212,7 +212,7 @@
         <hr>
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
-            <a href="product-details.html">
+            {% comment %} <a href="product-details.html"> {% endcomment %}
               <img src="{% static  'assets/images/new-arrival/03.webp' %}" width="60" alt="">
             </a>
           </div>
@@ -228,7 +228,7 @@
         <hr>
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
-            <a href="product-details.html">
+            {% comment %} <a href="product-details.html"> {% endcomment %}
               <img src="{% static 'assets/images/new-arrival/04.webp' %}" width="60" alt="">
             </a>
           </div>
@@ -244,7 +244,7 @@
         <hr>
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
-            <a href="product-details.html">
+            {% comment %} <a href="product-details.html"> {% endcomment %}
               <img src="{% static 'assets/images/new-arrival/05.webp' %}" width="60" alt="">
             </a>
           </div>
@@ -260,7 +260,7 @@
         <hr>
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
-            <a href="product-details.html">
+            {% comment %} <a href="product-details.html"> {% endcomment %}
               <img src="{% static 'assets/images/new-arrival/06.webp' %}" width="60" alt="">
             </a>
           </div>
@@ -276,7 +276,7 @@
         <hr>
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
-            <a href="product-details.html">
+            {% comment %} <a href="product-details.html"> {% endcomment %}
               <img src="{% static 'assets/images/new-arrival/07.webp' %}" width="60" alt="">
             </a>
           </div>
