--- a/E_commerce/templates/product_details.html
+++ b/E_commerce/templates/product_details.html
@@ -38,10 +38,7 @@
             <hr class="my-3">
             <div class="product-info">
               <h6 class="fw-bold mb-3">Product Details</h6>
-               <p class="mb-1">There are many variations of passages of Lorem Ipsum</p>
-               <p class="mb-1">All the Lorem Ipsum generators on the Internet tend to repeat</p>
-               <p class="mb-1">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece</p>
-               <p class="mb-1">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
+              <p class="mb-1">{{product.description}}</p>
             </div>
           </div>
           <div class="col-12 col-xl-5">
