--- a/E_commerce/templates/wishlist.html
+++ b/E_commerce/templates/wishlist.html
@@ -30,24 +30,24 @@
           <h4 class="mb-0 h4 fw-bold">Wishlist (10 Items)</h4>
        </div>
        <div class="ms-auto">
-        <button type="button" class="btn btn-light btn-ecomm">Continue Shopping</button>
+        <a href="{%url 'index'%}" type="button" class="btn btn-light btn-ecomm">Continue Shopping</a>
        </div>
       </div>
 
      <div class="similar-products">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 row-cols-xxl-5 g-4">
+        {% for product in products %}
         <div class="col">
           <div class="card rounded-0">
-            <div class="btn-close wishlist-close position-absolute end-0 top-0"></div>
+            <div class="position-absolute end-0 top-0"></div>
             <a href="javascript:;">
-              <img src="assets/images/best-sellar/01.webp" alt="" class="card-img-top rounded-0">
+              <img src="{{product.images.url }}" alt="" class="card-img-top rounded-0">
             </a>
             <div class="card-body border-top text-center">
-              <p class="mb-0 product-short-name">Color Printed Kurta</p>
+              <p class="mb-0 product-short-name">{{product.name}}</p>
               <div class="product-price d-flex align-items-center gap-2 mt-2 justify-content-center">
-                <div class="h6 fw-bold">$458</div>
-                <div class="h6 fw-light text-muted text-decoration-line-through">$2089</div>
-                <div class="h6 fw-bold text-danger">(70% off)</div>
+                <div class="h6 fw-bold">${{product.price}}</div>
+                <div class="h6 fw-light text-muted">{{product.description|truncatechars:20}}</div>
               </div>
             </div>
             <div class="card-footer bg-transparent text-center">
@@ -55,7 +55,8 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        {% endfor %}
+        {% comment %} <div class="col">
           <div class="card rounded-0">
             <div class="btn-close wishlist-close position-absolute end-0 top-0"></div>
             <a href="javascript:;">
@@ -224,7 +225,7 @@
             <div class="card-footer bg-transparent text-center">
               <a href="javascript:;" class="btn btn-ecomm w-100">Move to Bag</a>
             </div>
-          </div>
+          </div> {% endcomment %}
         </div>
         
 
