--- a/E_commerce/templates/index.html
+++ b/E_commerce/templates/index.html
@@ -72,7 +72,17 @@
           <div class="card">
             <div class="position-relative overflow-hidden">
               <div class="product-options d-flex align-items-center justify-content-center gap-2 mx-auto position-absolute bottom-0 start-0 end-0">
-                <a href="javascript:;"><i class="bi bi-heart"></i></a>
+                {% if product.status == 1 %} 
+                  <form action="{%url 'wish_product' product.pk %}" method = "POST">
+                    {% csrf_token %}
+                    <button type="submit" name="product.id" value="{{product.id}}"><i class="bi bi-heart-fill"></i></button>
+                  </form>
+                {% else %}
+                  <form action="{%url 'wish_product' product.pk %}" method = "POST">
+                    {% csrf_token %}
+                    <button type="submit" name="product.id" value="{{product.id}}"><i class="bi bi-heart"></i></button>
+                  </form>
+                {% endif %}
                 <a href="javascript:;"><i class="bi bi-basket3"></i></a>
                 <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-zoom-in"></i></a>
               </div>
